--- a/source/_data/sponsors.yml
+++ b/source/_data/sponsors.yml
@@ -35,6 +35,10 @@ silver:
     site_url: "https://www.workwave.com/"
 bronze:
   sponsor1:
+    name: "blexin"
+    logo_filename: "blexin.png"
+    site_url: "https://blexin.com/"
+  sponsor2:
     name: "stickermule"
     logo_filename: "stickermule.svg"
     site_url: "https://www.stickermule.com/it/uses/laptop-stickers"
