--- a/source/_data/workshop.yml
+++ b/source/_data/workshop.yml
@@ -241,19 +241,10 @@ workshops:
         teacher_org: "SUSE"
     topics_title: "Programma"
     topics:
-      - "Le sfide rappresentate dalla sicurezza dei container"
-      - "Funzionalità di NeuVector"
-      - "Installazione di un cluster Kubernetes e di NeuVector"
-      - "Una panoramica dell’interfaccia utente di NeuVector"
-      - "Cosa aspettarsi quando il tuo cluster K8s si aspetta una nuova app"
-      - "Comportamento di un’applicazione"
-      - "Cambio di modalità: come/quando/perché"
-      - "Bonus round: divertimento con scenari di attacco"
-      - "Docker e Kubernetes: Concetti ed Architetture"
-      - "Deployment e set up del Rancher Server"
-      - "Kubernetes cluster deployment"
-      - "Application Deployment & Access"
-
+    - "Introduzione a Rancher: Container e Kubernetes; Scalare la gestione di Kubernetes."
+    - "In un ambiente a disposizione dei partecipanti: Installazione Rancher Management Server; Installazione di un cluster downstream; Gestione di un cluster downstream."
+    - "Introduzione a NeuVector: Le sfide della sicurezza dei container; Panoramica delle caratteristiche di NeuVector."
+    - "In un ambiente a disposizione dei partecipanti: Installazione di NeuVector; NeuVector e CVEs - scanning; Runtime Security - imparare il comportamento di un’applicazione e gestirlo, monitoring o protect; DLP, WAFs, e altro."
     addressees_title: "A chi è rivolto"
     addressees_description: "Il laboratorio è rivolto a persone con ruoli tecnici e manageriali (architect, devOps, engineer, security manager, IT manager...), che conoscono kubernetes e che vogliono migliorarne l’utilizzo e la gestione con strumenti potenti come rancher e studiare gli aspetti di cybersicurezza nel mondo container."
     requirements_title: "Requisiti di partecipazione"
