--- a/source/_data/defaults.yml
+++ b/source/_data/defaults.yml
@@ -192,4 +192,4 @@ conference:
   footer_coc_link_label: "codice di condotta"
   # Google Tag Manager
   google:
-    tag_manager_id: "GTM-NHGPCHT"
+    tag_manager_id: "GTM-NJWQQRC"
